7150051: incorrect oopmap in critical native

Reviewed-by: kvn, twisti